--- a/public/css/main.css
+++ b/public/css/main.css
@@ -55,7 +55,7 @@
     .menu-branding .portrait {
       width: 250px;
       height: 250px;
-      background: url("../img/portrait.jpg");
+      background: url("../img/favicon.png");
       border-radius: 50%;
       border: solid 3px white; }
   .menu .nav-item {
@@ -268,7 +268,7 @@ main {
     height: 25vh;
     transform: translate3d(100%, 0, 0); }
     .menu-branding .portrait {
-      background: url("../img/portrait_small.jpg");
+      background: url("../img/favicon.png");
       width: 150px;
       height: 150px; }
   .about-info {
